--- a/app/views/layouts/shared/_sidemenu.html.erb
+++ b/app/views/layouts/shared/_sidemenu.html.erb
@@ -2,12 +2,12 @@
 	<div class="page-sidebar navbar-collapse collapse">
 		<ul class="page-sidebar-menu  page-header-fixed page-sidebar-menu-hover-submenu " data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
 			<li class="nav-item start active open">
-				<a href="#" class="nav-link nav-toggle">
+				<%= link_to questions_path, class: "nav-link nav-toggle" do %>
 					<i class="fa fa-question-circle"></i>
 					<span class="title">Preguntas</span>
 					<span class="selected"></span>
 					<span class="arrow open"></span>
-				</a>
+				<% end %>
 			</li>
 			<li class="nav-item">
 				<a href="#" class="nav-link nav-toggle">
