--- a/app/views/layouts/shared/_sidemenu.html.erb
+++ b/app/views/layouts/shared/_sidemenu.html.erb
@@ -10,11 +10,11 @@
 				<% end %>
 			</li>
 			<li class="nav-item">
-				<a href="#" class="nav-link nav-toggle">
+				<%= link_to '', { controller: "articles" }, class: "nav-link nav-toggle" do %>
 					<i class="fa fa-file-text-o"></i>
 					<span class="title">Quiz</span>
 					<span class="arrow"></span>
-				</a>
+				<% end %>
 			</li>
 		</ul>
 		<!-- END SIDEBAR MENU -->
