--- a/app/views/quiz/index.html.erb
+++ b/app/views/quiz/index.html.erb
@@ -20,15 +20,37 @@
 			<div class="portlet light ">
 				<div class="portlet-body">
 					<div class="row">
-						<div class="col-md-12">							
+						<div class="col-md-12">		
+							<% if flash[:correct] != nil %>
+								<% if flash[:correct] %>
+									<div class="alert alert-success">
+										Correct Answer
+									</div>
+								<% else %>
+									<div class="alert alert-danger">
+										Incorrect Answer
+									</div>
+								<% end %>
+								<% flash.discard(:correct) %>
+							<% end %>
 							<div>
 								<strong>Pregunta:</strong><br />
-								<%= @question.pregunta %>
+								<%= @question.pregunta.html_safe %>
 							</div>					
 							<br />
 							<div>
-								<strong>Respuesta:</strong><br />
-								<%= @question.respuesta %>
+								<%= form_tag({controller: "quiz", action: "answer"}, method: "post") do |f| %>	
+									<p>
+										<strong>Respuesta:</strong><br />
+										<%= hidden_field_tag :question_id, @question.id %>
+										<%= text_field_tag(:respuesta, "", class: "form-control") %>
+									</p>
+								 
+									<p>
+										<%= submit_tag("Contestar", class: "btn btn-success") %>
+										<%= link_to "Another Question", {controller: "quiz", action: "index"}, class: "btn btn-primary" %>
+									</p>
+								<% end %>
 							</div>
 						</div>
 					</div>
