--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -58,19 +58,6 @@
 </div>
 <script>
 $(document).ready(function(){
-	CKEDITOR.replace( 'question_pregunta', {
-		// Define the toolbar groups as it is a more accessible solution.
-		toolbarGroups: [
-			{"name":"basicstyles","groups":["basicstyles"]},
-			{"name":"links","groups":["links"]},
-			{"name":"paragraph","groups":["list","blocks"]},
-			{"name":"document","groups":["mode"]},
-			{"name":"insert","groups":["insert"]},
-			{"name":"styles","groups":["styles"]},
-			{"name":"about","groups":["about"]}
-		],
-		// Remove the redundant buttons from toolbar groups defined above.
-		removeButtons: 'Underline,Strike,Subscript,Superscript,Anchor,Styles,Specialchar'
-	} );
+	$('textarea').wysihtml5();
 });
 </script>
