--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -10,6 +10,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Quiz Master</title>
+		<%= csrf_meta_tags %>
 		<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 		<%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     </head>
