- HTML safe show blade

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -24,7 +24,7 @@
 						<div class="col-md-12">							
 							<div>
 								<strong>Pregunta:</strong><br />
-								<%= @question.pregunta %>
+								<%= @question.pregunta.html_safe %>
 							</div>					
 							<br />
 							<div>
